// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BottomSheetTemplate > renders correctly 1`] = `
<v-bottom-sheet-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  data-v-d59e89da=""
  disabled="false"
  eager="false"
  fullscreen="false"
  height="400"
  inset="false"
  location="bottom"
  locationstrategy="static"
  modelvalue="true"
  noclickanimation="false"
  openonhover="false"
  origin="center center"
  persistent="false"
  retainfocus="true"
  scrim="true"
  scrollable="false"
  scrollstrategy="block"
  sticktotarget="false"
  theme="dark"
  transition="bottom-sheet-transition"
  viewportmargin="12"
  zindex="2400"
>
  <v-card-stub
    border="false"
    data-v-d59e89da=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="bottom-sheet-header d-flex align-center justify-center px-6"
      data-v-d59e89da=""
    >
      <!--v-if-->
      <evocon-v-button-stub
        class="close-button"
        color="white"
        data-v-d59e89da=""
        icon="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        iconcolor=""
        size="default"
        text=""
        textclass=""
        type="primary"
      />
    </div>
    
    
  </v-card-stub>
</v-bottom-sheet-stub>
`;

exports[`BottomSheetTemplate > renders default slot content 1`] = `
<v-bottom-sheet-stub
  absolute="false"
  activatorprops="[object Object]"
  attach="false"
  capturefocus="true"
  closeonback="true"
  closeoncontentclick="false"
  contained="false"
  data-v-d59e89da=""
  disabled="false"
  eager="false"
  fullscreen="false"
  height="400"
  inset="false"
  location="bottom"
  locationstrategy="static"
  modelvalue="true"
  noclickanimation="false"
  openonhover="false"
  origin="center center"
  persistent="false"
  retainfocus="true"
  scrim="true"
  scrollable="false"
  scrollstrategy="block"
  sticktotarget="false"
  theme="dark"
  transition="bottom-sheet-transition"
  viewportmargin="12"
  zindex="2400"
>
  <v-card-stub
    border="false"
    data-v-d59e89da=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="bottom-sheet-header d-flex align-center justify-center px-6"
      data-v-d59e89da=""
    >
      <!--v-if-->
      <evocon-v-button-stub
        class="close-button"
        color="white"
        data-v-d59e89da=""
        icon="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        iconcolor=""
        size="default"
        text=""
        textclass=""
        type="primary"
      />
    </div>
    
    <div
      class="test-content"
    >
      Body
    </div>
    
  </v-card-stub>
</v-bottom-sheet-stub>
`;
